--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("bg.png");
+  background-image: url("trial.gif");
 
   /* Full height */
   height: 100%;
