add responsive images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("trial.gif");
+  background-image: url("mobile.gif");
 
   /* Full height */
   height: 100%;
@@ -21,6 +21,37 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media screen and (min-width: 450px) {
+  .bg {
+    /* The image used */
+    background-image: url("tablet.gif");
+
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .bg {
+    /* The image used */
+    background-image: url("desktop.gif");
+
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
 </style>
 </head>
 <body>
