--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Kūsho World</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kūsho World</title>
+  <link rel="icon" type="image/x-icon" href="icon.png">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <style>
 body, html {
   height: 100%;
@@ -20,6 +23,13 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media screen and (max-width: 449px) {
+  img{
+    position: fixed;
+    bottom:0%;
+  }
 }
 
 @media screen and (min-width: 450px) {
@@ -56,7 +66,22 @@ body, html {
 </head>
 <body>
 
-<div class="bg"></div>
+<div class="bg">
+  <div class="w3-container">
+      <img src="kusho_logo.png" alt="Kūsho Logo" style="width:200px;height:200px;" onclick="document.getElementById('id01').style.display='block'">
+  <div id="id01" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="w3-container">
+        <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+        <p>Please send a screenshot of this in the <b>general-chat</b> with the hashtag: #KushoIsForEveryone. First one will get 10 free RON tokens.</p>
+
+        <p>Love,</p>
+        <p>Kūsho Team</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 </body>
 </html>
