--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body, html {
     <div class="w3-modal-content">
       <div class="w3-container">
         <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-        <p>Please send a screenshot of this in the <b>general-chat</b> with the hashtag: #KushoIsForEveryone. First one will get 10 free RON tokens.</p>
+        <p>Please send a screenshot of this in the <b>general-chat</b> with the hashtag: #KushoIsForEveryone. Mention @Senshi - MOD. First one will get 10 free RON tokens.</p>
 
         <p>Love,</p>
         <p>Kūsho Team</p>
